# giza-benchmark

./: .gitignore  Cargo.toml  README.md
benchmark/: Cargo.toml
benchmark/src/: consts.rs  data.rs  main.rs  orion.rs  utils.rs
benchmark/src/framework/: ezkl.rs  mod.rs  orion.rs
benchmarks/iris-decision-tree/: README.md  iris_decision_tree.onnx
benchmarks/iris-decision-tree/orion/: input.txt
benchmarks/iris-xgboost/: README.md  iris_xgboost.onnx
benchmarks/linear-regression/: README.md  linear_regression.onnx
benchmarks/linear-regression/orion/: input.txt  network.sierra.json
benchmarks/mnist-ff/: README.md  mnist-ff.onnx
benchmarks/simple_cairo_program/: explo.sierra.json  program.memory  program.proof  program.trace
cairo_stack/: Cargo.toml
cairo_stack/cairo_runner/: Cargo.toml
cairo_stack/cairo_runner/src/: main.rs  runner.rs
cairo_stack/src/: lib.rs  main.rs  prover.rs  runner.rs
crates/cairo_runner/: Cargo.toml
crates/cairo_runner/src/: cairo_run.rs  lib.rs  runner.rs  types.rs  utils.rs
examples/xgb/: xgb_inf.sierra.json
models/mlp/: mlp.onnx
models/mlp/ezkl/: input.json  network.ezkl  settings.json
models/mlp/orion/: network.input  network.sierra
orion_cairo/: README.md
orion_cairo/nn/: README.md
orion_cairo/nn/mlp/: mlp.proof
results/mlp/ezkl/: vk.key  witness.json
src/: consts.rs  data.rs  main.rs
src/framework/: ezkl.rs  mod.rs  orion_cairo.rs
