[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo_stack = { path = "../cairo_stack" }
cairo-lang-sierra = { version = "2.4.2", default-features = false }
sys-info = "0.9"
stark-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks", rev = "fed12d674418e4f09bc843b71bc90008a85b1aed", default-features = false }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
clap = "3.0"
tokio = { version = "1.0", features = ["full"] }
jemallocator = "0.3"
jemalloc-ctl = "0.3"