[package]
name = "cairo_stack"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks", rev = "fed12d674418e4f09bc843b71bc90008a85b1aed", default-features = false }
lambdaworks-math = { git = "https://github.com/lambdaclass/lambdaworks", rev = "fed12d674418e4f09bc843b71bc90008a85b1aed", default-features = false }
stark-platinum-prover = { git = "https://github.com/lambdaclass/lambdaworks", rev = "fed12d674418e4f09bc843b71bc90008a85b1aed", default-features = false }
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
clap = { version = "4.4.6", features = ["derive"], optional = true }
rayon = { version = "1.8.0", optional = true }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm.git", rev = "1a78237", default-features = false, features = [
    "cairo-1-hints",
] }
cairo-lang-sierra-type-size = { version = "2.3.1", default-features = false }
cairo-lang-sierra-ap-change = { version = "2.3.1", default-features = false }
cairo-lang-sierra-gas = { version = "2.3.1", default-features = false }
cairo-lang-casm = { version = "2.4.2", default-features = false }
cairo-lang-compiler = { version = "2.4.2", default-features = false }
cairo-lang-sierra-to-casm = { version = "2.4.2", default-features = false }
cairo-lang-sierra = { version = "2.4.2", default-features = false }
cairo-lang-utils = { version = "2.4.2", default-features = false }
itertools = "0.11.0"
thiserror-no-std = { version = "2.0.2", default-features = false }

sys-info = "0.9"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
serde_json = { version = "1.0", features = [
    "arbitrary_precision",
    "alloc",
], default-features = false }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "full"] }

[features]
default = ["instruments", "parallel"]
parallel = ["dep:rayon", "stark-platinum-prover/parallel"]
instruments = [
    "stark-platinum-prover/instruments",
] # This enables timing prints in prover and verifier
